Use a portal to render the Drawer close button to fix the alignment with the Mini-Cart Contents block (https://github.com/woocommerce/woocommerce-blocks/pull/9507)

--- a/plugins/woocommerce-blocks/assets/js/blocks/mini-cart/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/mini-cart/style.scss
@@ -57,6 +57,7 @@
 	.wp-block-woocommerce-mini-cart-contents {
 		box-sizing: border-box;
 		padding: 0;
+		position: relative;
 		justify-content: center;
 
 		.wc-block-components-notices {
